--- a/app/src/main/res/layout/fragment_my_giftcards.xml
+++ b/app/src/main/res/layout/fragment_my_giftcards.xml
@@ -8,6 +8,10 @@
         <variable
             name="hasContent"
             type="android.databinding.ObservableBoolean" />
+
+        <variable
+            name="isSignedIn"
+            type="android.databinding.ObservableBoolean" />
     </data>
 
     <RelativeLayout
@@ -23,17 +27,17 @@
         <RelativeLayout
             android:id="@+id/no_giftcards_text_id"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="@{hasContent.get() ? View.GONE : View.VISIBLE}">
+            android:layout_height="match_parent">
 
             <TextView
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:text="@string/msg_you_have_no_gc_for_sale"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="@{isSignedIn.get() ? (@string/msg_you_have_no_gc_for_sale) : (@string/create_or_signin_text)}"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textStyle="bold|italic"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:visibility="@{hasContent.get() ? View.GONE : View.VISIBLE}" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab_id"
@@ -43,7 +47,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginBottom="@dimen/fab_margin"
                 android:layout_marginRight="@dimen/fab_margin"
-                android:src="@android:drawable/ic_input_add" />
+                android:src="@android:drawable/ic_input_add"
+                android:visibility="@{isSignedIn.get() ? View.VISIBLE : View.GONE}" />
         </RelativeLayout>
     </RelativeLayout>
 </layout>
